objects/JunoDoc__Audit_Trail__c/JunoDoc__Audit_Trail__c.object-meta.xml
<CustomObject>
    <label>Audit Trail</label>
    <nameField>
        <label>Audit Trail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>