objects/JunoDoc__Audit_Trail__c/fields/JunoDoc__Date__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>