objects/JunoDoc__Audit_Trail__c/fields/JunoDoc__Date_Time__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Date_Time__c</fullName>
    <label>Date Time</label>
    <type>DateTime</type>
</CustomField>