objects/JunoDoc__Audit_Trail__c/fields/JunoDoc__IP_Address__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__IP_Address__c</fullName>
    <label>IP Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>