objects/JunoDoc__Audit_Trail__c/fields/JunoDoc__JunoSign_Transaction__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__JunoSign_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JunoSign Transaction</label>
    <referenceTo>JunoDoc__Juno_Sign_Transaction__c</referenceTo>
    <relationshipLabel>Audit Trails</relationshipLabel>
    <relationshipName>Audit_Trails</relationshipName>
    <type>Lookup</type>
</CustomField>