objects/JunoDoc__Audit_Trail__c/fields/JunoDoc__Status__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>