objects/JunoDoc__Audit_Trail__c/listViews/JunoDoc__All.listView-meta.xml
<ListView>
    <fullName>JunoDoc__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>